--- a/LaLigaConsumer/Web.config
+++ b/LaLigaConsumer/Web.config
@@ -11,7 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+	  <globalization uiCulture="en-US" culture="en-US"></globalization>
+	  <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <httpModules>
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
